monitoria/mac323/5-3-24/grades/Vítor-Kei-Taira-Tamada_201329_assignsubmission_file_mEP24---find-all-occurrences.txt

LOG DE COMPILAÇÃO E TESTE
Existem dois métodos de compilação, eles estão indicados, se um falha eu parto pro outro. Então se quiser entender o porque não compilou, verifique todos.
Segue também o log do corretor, pode ser interessante para descobrir a natureza de seus erros. A saída está trucada (não mostra todas as linha), se quiser ver todo o log, fale comigo

CC......
EP: Vítor-Kei-Taira-Tamada_201329_assignsubmission_file_mEP24---find-all-occurrences
NOTA: 100
CORREÇÃO AUTOMÁTICA
1200 Pontos (máximo: 1600, dos quais 400 são bônus)
0 Testes com Falha no corretor (avise o monitor)
2 Testes com Erro de Compilação (incui o bônus)

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/5-3-24/tester/checker/checker' is up to date.
======= Booyer_006 ============
BooyerDoVictor.java:10: error: cannot find symbol
            for (int i : ex.findAll(StdIn.readString()))
                           ^
  symbol:   method findAll(String)
  location: variable ex of type BoyerMoore
1 error
Compilation Error on Booyer
======= Booyer_007 ============
BooyerDoVictor.java:10: error: cannot find symbol
            for (int i : ex.findAll(StdIn.readString()))
                           ^
  symbol:   method findAll(String)
  location: variable ex of type BoyerMoore
1 error
Compilation Error on Booyer
======= Brute_003 ============

real	0m0.170s
user	0m0.216s
sys	0m0.036s
partially correct (200) perfeito
======= Brute_004 ============

real	0m0.165s
user	0m0.196s
sys	0m0.020s
partially correct (200) perfeito
======= Brute_005 ============

real	0m0.166s
user	0m0.200s
sys	0m0.028s
partially correct (200) perfeito
======= KMP_000 ============

real	0m0.153s
user	0m0.172s
sys	0m0.040s
partially correct (200) perfeito
======= KMP_001 ============

real	0m0.171s
user	0m0.184s
sys	0m0.040s
partially correct (200) perfeito
======= KMP_002 ============

real	0m0.162s
user	0m0.172s
sys	0m0.048s
partially correct (200) perfeito
